# compilerHomework

./: Analyze.txt  CMakeLists.txt  DelimiterDetector.cpp  DelimiterDetector.h  FirstSet.txt  KeywordDetector.cpp  KeywordDetector.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Lexical_Results.txt  NumericSequenceValidator.cpp  NumericSequenceValidator.h  OperatorDetector.cpp  OperatorDetector.h  Quaternion_information.txt  SymbolRecognizer.cpp  SymbolRecognizer.h  SysStack.txt  TokenType.h  common.h  grammar.txt  lexicalanalyzer.h  lritem.cpp  main.cpp  mainpage.cpp  mainpage.h  midcodeparser.cpp  midcodeparser.h  parser.cpp  parser.h  preprocessor.cpp  preprocessor.h  production.cpp  subDetector.cpp  subDetector.h  test.cpp  test.txt  test_preprocessing.txt  token.cpp  util.cpp  (+2 more)
include/: KeyWord.h  Lexeme.h  QuadExpression.h  abstractdfa.h  actionGotoPage.h  common.h  lexicalanalyzer.h  lritem.h  mainpage.h  mid_code_gen.h  midcodeparser.h  parser.h  production.h  scanner.h  token.h  util.h
src/: QuadExpression.cpp  abstractdfa.cpp  actionGotoPage.cpp  lexicalanalyzer.cpp  mainpage.cpp  mid_code_gen.cpp  midcodeparser.cpp  parser.cpp  scanner.cpp  util.cpp  widget.cpp  widget.ui
